correção de bugs na criação da proposta d e solução e revisar informações

--- a/src/app/pages/ncs/create-prop/steps/step1/ishikawa-dialog/ishikawa-dialog.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step1/ishikawa-dialog/ishikawa-dialog.component.html
@@ -211,11 +211,11 @@
         <button
                 type="button"
                 class="btn btn-dark"
-                [disabled]="isLastStep()"
+                
                 (click)="nextStep()"
         >
-            Avançar
-            <i class="bi bi-arrow-right"></i>
+            {{returnTextButton()}}
+            <i *ngIf="!isLastStep()" class="bi bi-arrow-right"></i>
         </button>
     </div>
 </div>
