ajustes no layout

--- a/src/app/pages/ncs/about/proposal/proposal.component.css
+++ b/src/app/pages/ncs/about/proposal/proposal.component.css
@@ -30,6 +30,14 @@ h2 {
 .caixa-cinza {
     background-color: #EEEEEE;
     border-radius: 8px;
+
+}
+
+.caixa-cinza {
+    background-color: #EEEEEE;
+    border-radius: 8px;
+   
+
 }
 
 .textarea {
@@ -48,4 +56,8 @@ h2 {
 .caixa {
     border: 2px solid #333333;
     border-radius: 8px;
+}
+
+.why-box{
+    width: 300px;
 }
