--- a/src/app/pages/ncs/create-prop/steps/step1/ishikawa-diagram.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step1/ishikawa-diagram.component.html
@@ -41,25 +41,25 @@
         <img src="../../../../../../assets/images/Espinha de Peixe.png" width="900" class="ml-5 mr-3">
         <div class="d-flex">
             <div class="col">
-                <label>Mão de Obra</label>
+                
                 <p-editor [ngModel]="'<p>'+this.propService.propSolution.run_training + '</p>' + this.propService.propSolution.man_power_description" [style]="editorStyle" [readonly]="true" (click)="openDialog(4)">
                     <ng-template pTemplate="header">
                     </ng-template>
-                </p-editor>
+                </p-editor><label class="mt-1">Mão de Obra</label>
             </div>
             <div class="col">
-                <label>Meio Ambiente</label>
+               
                 <p-editor [ngModel]="this.propService.propSolution.environment_description" [style]="editorStyle" [readonly]="true" (click)="openDialog(5)">
                     <ng-template pTemplate="header">
                     </ng-template>
-                </p-editor>
+                </p-editor><label class="mt-1">Meio Ambiente</label>
             </div>
             <div class="col">
-                <label>Máquina</label>
+                
                 <p-editor [ngModel]="this.propService.propSolution.machine_description" [style]="editorStyle" [readonly]="true" (click)="openDialog(6)">
                     <ng-template pTemplate="header">
                     </ng-template>
-                </p-editor>
+                </p-editor><label class="mt-1">Máquina</label>
 
             </div>
         </div>
