--- a/src/app/pages/ncs/create/steps/step3/contact-dialog/contact-dialog.component.html
+++ b/src/app/pages/ncs/create/steps/step3/contact-dialog/contact-dialog.component.html
@@ -28,7 +28,7 @@
     </small>
 </div>
 <div class="editar-campo">
-    <label for="type">Tipo de Contato</label>
+    <label for="type">Parceiro</label>
     <input
             type="text"
             pInputText
