--- a/src/app/pages/ncs/create/steps/step3/contacts.component.html
+++ b/src/app/pages/ncs/create/steps/step3/contacts.component.html
@@ -23,7 +23,7 @@
       <tr>
         <th>Nome</th>
         <th>E-mail</th>
-        <th>Tipo de Contato</th>
+        <th>Parceiro</th>
         <th></th>
       </tr>
     </ng-template>
@@ -86,7 +86,7 @@
                   <span class="auto-complete-item">{{ contact.email }}</span>
                 </div>
                 <div class="px-5">
-                  <span class="auto-complete-label">TIPO DE CONTATO</span><br />
+                  <span class="auto-complete-label">PARCEIRO</span><br />
                   <span class="auto-complete-item">{{ contact.type }}</span>
                 </div>
               </div>
@@ -112,7 +112,7 @@
           <tr>
             <th>Nome</th>
             <th>E-mail</th>
-            <th>Tipo de Contato</th>
+            <th>Parceiro</th>
             <th></th>
           </tr>
         </ng-template>
