--- a/src/app/pages/ncs/create-prop/steps/step3/action-plan.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step3/action-plan.component.html
@@ -7,7 +7,7 @@
 <div class="d-flex justify-content-between flex-column flex-lg-row mt-5">
     <div class="d-flex justify-content-between flex-column flex-lg-row">
         <div class="d-flex flex-column mr-lg-3 inputs-sm my-auto">
-            <label>Descrição</label>
+            <label>Descrição da Ação</label>
             <input
                     [(ngModel)]="name"
                     name="amountNC"
