--- a/src/app/pages/ncs/create/steps/step1/identificacao-da-nc/identificacao-da-nc.component.html
+++ b/src/app/pages/ncs/create/steps/step1/identificacao-da-nc/identificacao-da-nc.component.html
@@ -7,7 +7,7 @@
   <div class="row">
     <div class="col">
       <div class="dropdown">
-        <label for="">Tipo de NC</label>
+        <label for="">Tipo de NC *</label>
         <select id="selectTypeNc" (change)="checkAuditoria($event.target.value)" formControlName="tipos_nc_item">
           <option [ngValue]="null" disabled selected hidden>Selecione...</option>
           <option *ngFor="let tiposNc of tiposNc" value="{{ tiposNc }}">{{ tiposNc }}</option>
@@ -23,7 +23,7 @@
 
 
     <div class="d-flex flex-column inputs-sm  col-5" >
-      <label for="tipos_auditoria_item">Segmento de Auditoria</label>
+      <label for="tipos_auditoria_item">Segmento de Auditoria *</label>
       <input
               formControlName="tipos_auditoria_item"
               name="tipos_auditoria_item"
@@ -47,7 +47,7 @@
 
     <div class="col">
       <div class="dropdown">
-        <label for="">Setor/Departamento Afetado</label>
+        <label for="">Setor/Local Afetado *</label>
         <select formControlName="tipos_local_item">
           <option [ngValue]="null" disabled selected hidden>Selecione...</option>
           <option *ngFor="let item of nonComplicanceService.sectors" [attr.selected]="nonComplicanceService.nc.tipos_local_item==item.name ? true : null">
