--- a/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point-items/rejection-point-items.component.html
+++ b/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point-items/rejection-point-items.component.html
@@ -15,7 +15,7 @@
   <div class="row">
     <div class="col">
       <div class="p-fluid autoComplete">
-        <label class="">Instrução de Trabalho</label>
+        <label class="">Instrução de Trabalho *</label>
         <p-autoComplete
           class="p-autocomplete"
           [style]="{ width: '100%' }"
