--- a/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
+++ b/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
@@ -59,7 +59,7 @@
 
 <div class=" row-search d-flex mb-2 pl-0">
   <div class="dropdown col ml-0 mt-0 px-0">
-    <label>Tipo de Parceiro</label>
+    <label>Tipo de Parceiro *</label>
     <select
       [(ngModel)]="nonComplicanceService.nc.tipos_parceiro_item"
       (change)="onChange()"
