--- a/src/app/pages/ncs/import-json/import-json.component.html
+++ b/src/app/pages/ncs/import-json/import-json.component.html
@@ -114,3 +114,45 @@
     </p-button>
   </ng-template>
 </p-fileUpload>
+
+<h1 class="mt-3">Importar NRs - Normas Regulamentadoras</h1>
+<p-fileUpload (uploadHandler)="onUpload($event, 'regulatory')" [customUpload]="true" accept=".xlsx, .xls"
+              chooseLabel="Escolher Arquivo" uploadLabel="Importar Arquivo Selecionado" [showCancelButton]="false"
+              invalidFileTypeMessageDetail="Formato de arquivo inválido, selecione apenas arquivos do tipo {0}">
+  <ng-template pTemplate="toolbar">
+    <p-button label="Baixar Arquivo de Exemplo" styleClass="p-button-link" (onClick)="downloadFile('regulatory')">
+    </p-button>
+  </ng-template>
+</p-fileUpload>
+
+
+<h1 class="mt-3">Importar ISOs - Normas NBR</h1>
+<p-fileUpload (uploadHandler)="onUpload($event, 'nbr')" [customUpload]="true" accept=".xlsx, .xls"
+              chooseLabel="Escolher Arquivo" uploadLabel="Importar Arquivo Selecionado" [showCancelButton]="false"
+              invalidFileTypeMessageDetail="Formato de arquivo inválido, selecione apenas arquivos do tipo {0}">
+  <ng-template pTemplate="toolbar">
+    <p-button label="Baixar Arquivo de Exemplo" styleClass="p-button-link" (onClick)="downloadFile('nbr')">
+    </p-button>
+  </ng-template>
+</p-fileUpload>
+
+<h1 class="mt-3">Importar Máquinas</h1>
+<p-fileUpload (uploadHandler)="onUpload($event, 'machine')" [customUpload]="true" accept=".xlsx, .xls"
+              chooseLabel="Escolher Arquivo" uploadLabel="Importar Arquivo Selecionado" [showCancelButton]="false"
+              invalidFileTypeMessageDetail="Formato de arquivo inválido, selecione apenas arquivos do tipo {0}">
+  <ng-template pTemplate="toolbar">
+    <p-button label="Baixar Arquivo de Exemplo" styleClass="p-button-link" (onClick)="downloadFile('machine')">
+    </p-button>
+  </ng-template>
+</p-fileUpload>
+
+<h1 class="mt-3">Importar Equipamentos</h1>
+<p-fileUpload (uploadHandler)="onUpload($event, 'equipament')" [customUpload]="true" accept=".xlsx, .xls"
+              chooseLabel="Escolher Arquivo" uploadLabel="Importar Arquivo Selecionado" [showCancelButton]="false"
+              invalidFileTypeMessageDetail="Formato de arquivo inválido, selecione apenas arquivos do tipo {0}">
+  <ng-template pTemplate="toolbar">
+    <p-button label="Baixar Arquivo de Exemplo" styleClass="p-button-link" (onClick)="downloadFile('equipament')">
+    </p-button>
+  </ng-template>
+</p-fileUpload>
+
