conecta front e back do sgq

--- a/src/app/pages/ncs/sgq-evaluation/sgq-header/sgq-header.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/sgq-header/sgq-header.component.html
@@ -9,7 +9,7 @@
                 <p>Avaliação SGQ</p>
                 <p-chip class="ml-2">
                     <i class="bi bi-ticket-perforated mr-2"></i>
-                    {{"001/2022"}}
+                    {{this.sgqServ.nc?.code}}
                 </p-chip>
             </div>
         </div>
