--- a/src/app/pages/ncs/sgq-evaluation/steps/changes/changes.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/changes/changes.component.html
@@ -1,5 +1,5 @@
 <div class="cabecalho">
-    <h1 class="mr-3">Mudanças</h1>
+    <h1 class="mr-3">Mudanças do SGQ *</h1>
     <p>
         Descreva as mudanças no SGQ observadas nesta NC.
     </p>
@@ -8,7 +8,7 @@
 <div class="mt-4">
     <p-editor
             [(ngModel)]="this.sgqServ.sgq.textArea3"
-            [style]="{ height: '50vh' }"
+            [style]="{ height: '25vh' }"
             [modules]="{counter: {container: '#counterCh',unit: 'character'}}"
     ></p-editor>
     <div id="counterCh" class="text-end">0</div>
