--- a/src/app/pages/ncs/sgq-evaluation/steps/review-info-sgq/review-info-sgq.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/review-info-sgq/review-info-sgq.component.html
@@ -169,7 +169,7 @@
         </ng-template>
         <ng-template pTemplate="content">
             <div class="card">
-                <p-table [value]="[]">
+                <p-table [value]="this.sgqServ.nc.contacts">
                     <ng-template pTemplate="header">
                         <tr>
                             <th>Nome</th>
