--- a/src/app/pages/ncs/sgq-evaluation/steps/risks/risks.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/risks/risks.component.html
@@ -1,5 +1,5 @@
 <div class="cabecalho">
-    <h1 class="mr-3">Riscos e Oportunidades</h1>
+    <h1 class="mr-3">Riscos e Oportunidades *</h1>
     <p>
         Descreva os riscos e oportunidades observados nesta NC.
     </p>
@@ -8,7 +8,7 @@
 <div class="mt-4">
     <p-editor
             [(ngModel)]="this.sgqServ.sgq.textArea2"
-            [style]="{ height: '50vh' }"
+            [style]="{ height: '25vh' }"
             [modules]="{counter: {container: '#counterRc',unit: 'character'}}"
     ></p-editor>
     <div id="counterRc" class="text-end">0</div>
