--- a/src/app/pages/ncs/about/sgq-evaluation/sgq-evaluation.component.html
+++ b/src/app/pages/ncs/about/sgq-evaluation/sgq-evaluation.component.html
@@ -11,22 +11,29 @@
     </div>
     <div class="d-flex justify-content-end align-items-center mb-3">
 
-        <button class="btn btn-dark ml-3" disabled>
+        <button class="btn btn-dark ml-3" [disabled]="!(aboutSrv.nc?.proposalSolution && aboutSrv.nc?.costs?.length>0)">
             Iniciar Avaliação
             <i class="bi bi-file-earmark-medical"></i>
         </button>
     </div>
 </div>
 <div class="image-box d-flex align-items-center justify-content-center mt-5">
-    <img src="../../../../../../../assets/images/Ilustrações3.svg" alt="" />
-
+    <img *ngIf="!(aboutSrv.nc?.proposalSolution && aboutSrv.nc?.costs?.length>0)" src="../../../../../../../assets/images/Ilustrações3.svg" alt="" />
+    <img *ngIf="aboutSrv.nc?.proposalSolution && aboutSrv.nc?.costs?.length>0" src="../../../../../../../assets/images/Illustration.svg" alt="" />
 </div>
-<h2 class="text-center text-black">Ainda falta uma fase!</h2>
-<h3 class="text-center text-black">Para avaliar esta NC, é necessário primeiro completar as ações do plano de ação.</h3>
-<h5 class="text-center">Contate o responsável caso este não seja você.</h5>
+<div *ngIf="!(aboutSrv.nc?.proposalSolution && aboutSrv.nc?.costs?.length>0)" class="mt-3">
+    <h2 class="text-center text-black">Ainda falta uma fase!</h2>
+    <h3 class="text-center text-black">Para avaliar esta NC, é necessário primeiro completar as ações do plano de ação.</h3>
+    <h5 class="text-center">Contate o responsável caso este não seja você.</h5>
+</div>
+<div *ngIf="aboutSrv.nc?.proposalSolution && aboutSrv.nc?.costs?.length>0" class="mt-3">
+    <h2 class="text-center text-black">NC ainda não avaliada!</h2>
+    <h3 class="text-center text-black">A fase de avaliação deve ser completada para a exibição de resultados.</h3>
+    <h5 class="text-center">Contate o responsável caso este não seja você.</h5>
+</div>
 
 <div class="text-center">
-    <button type="button" class="btn btn-dark" disabled>
+    <button type="button" class="btn btn-dark" [disabled]="!(aboutSrv.nc?.proposalSolution && aboutSrv.nc?.costs?.length>0)" routerLink="../../sgq/{{id}}">
         Iniciar Avaliação
         <i class="bi bi-file-earmark-medical"></i>
     </button>
