--- a/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.html
@@ -1,5 +1,5 @@
 <div class="cabecalho">
-    <h1 class="mr-3">Relato e Evidências da Solução do Problema</h1>
+    <h1 class="mr-3">Relato e Evidências da Solução do Problema *</h1>
     <p>
         Comente sobre o processo e anexe evidências da solução do problema desta NC
     </p>
